src/css/_layout.scss
.container, 
.header__content,
.footer__content {
    width: clamp(30rem,80vw,100rem);
    margin: 0 auto;
}

.container {
    min-height: 84vh;
    position: relative;

    transform: translateY(10rem);
}


.footer {
    border-top: solid 1px #ddd;
    padding: clamp(2rem,5vw,5rem);
    background-color: #fafafa;
    border-top: 1px solid #eaeaea;

    font-size: 1.2rem;
    font-weight: 700;
}



@media only screen and (max-width: 500px)  {
    .container, 
    .header__content,
    .footer__content {
        width: clamp(30rem,95vw,100rem);
    }

    .container {
        padding: 5rem;
    }
}

